[package]
name = "aoc2020"
version = "0.1.0"
authors = ["mpostma <postma.marin@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rdxsort = "0.3.0"
regex = "1.4.2"
vec_map = "0.8.2"
voracious_radix_sort = "1.1.0"

